# mdl_recommender

./: .gitignore  README.md  pyproject.toml
notebooks/: 01 _explore.ipynb  03_embeddings.ipynb  04_vector_viz.ipynb  cleaning.ipynb  explore.ipynb
src/mdl/database/: connection.py  functions.sql  loader.py  schema.sql
src/mdl/recommender/: recommend.py
src/mdl/scraper/: drama_scraper.py  list_scraper.py  run_scrape.py
